﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-02-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php:
      - fixed bug #1416848 'Insert new row from Browse page'
    * libraries/common.lib.php:
      - fixed bug #1409893 - links in navigation frame opens new window
    * libraries/select_server.lib.php:
      - fixed bug #1425688 'Server Select quirk'
      - valid XHTML 1.0
      - code readability

2006-02-12 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/english and hebrew: bug #1429769, typo
    * tbl_change.php, tbl_replace.php: bug #1429074, "go back to this page"
      choice should be sticky

2006-02-10 Marc Delisle  <lem9@users.sourceforge.net>
    * .htaccess added to main directory for bug #1411996; at least on
      servers supporting .htaccess we can run even if session.auto_start
      is enabled
    * lang/belarusian updates, thanks to Jaska Zedlik
    * lang/catalan update, thanks to Xavier Navarro (xavin).

2006-02-09 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libararies/session.inc.php:
      stop execution and ommit warning on session.auto_start enabled
    
2006-02-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/mult_submit.inc.php: bug #1404565, left frame refresh on 
      db drop from Databases link in main page

2006-02-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: leave the possibility of having a
      backslash in the path on non-Windows system, thanks to Michal;
      and bug #1418769, part 2: missing argument (PHP 4 constructor)

2006-02-06 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Fix typos (bug #1424923).

2006-02-05 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/mult_submits.inc.php, server_databases.php: array to string 
      conversion (sorry to late :-( ), use of $_REQUEST
    * sql.php: fixed some 'not refreshing left frame'