@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2006-02-13 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/display_tbl.lib.php: bug #1425522, warning when calling
+      a stored procedure, thanks to JTC - jcqns
+
 2006-02-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * libraries/common.lib.php:
       - fixed bug #1416848 'Insert new row from Browse page'
